--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -9,10 +9,15 @@
 		"lint": "next lint",
 		"deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
 		"preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
-		"cf-typegen": "wrangler types --env-interface CloudflareEnv ./cloudflare-env.d.ts"
+		"cf-typegen": "wrangler types --env-interface CloudflareEnv ./cloudflare-env.d.ts",
+    "postinstall": "fumadocs-mdx"
 	},
 	"dependencies": {
 		"@opennextjs/cloudflare": "^1.6.5",
+		"@types/mdx": "^2.0.13",
+		"fumadocs-core": "^15.6.10",
+		"fumadocs-mdx": "^11.7.5",
+		"fumadocs-ui": "^15.6.10",
 		"next": "15.4.6",
 		"react": "19.1.0",
 		"react-dom": "19.1.0"
