chore(deps): upgrade

--- a/apps/blog/wrangler.jsonc
+++ b/apps/blog/wrangler.jsonc
@@ -17,7 +17,10 @@
 	},
 	"observability": {
 		"enabled": true
-	}
+	},
+  // "routes": [
+    
+  // ]
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
