--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,3 +2,20 @@ packages:
   - 'apps/*'
   - 'packages/*'
   - blog-archived
+
+# hoistPattern:
+#   - '!tailwindcss'
+#   - '!@iconify/tailwind'
+
+# publicHoistPattern:
+#   - '!tailwindcss'
+
+# hoist: false
+
+nodeLinker: hoisted
+
+catalogs:
+  tailwindcss3:
+    tailwindcss: ^3.4.17
+  tailwindcss4:
+    tailwindcss: ^4
