--- a/.npmrc
+++ b/.npmrc
@@ -2,4 +2,4 @@
 # registry=http://registry.npmmirror.com/
 git-checks=false
 package-manager-strict=false
-shamefully-hoist=true
+# shamefully-hoist=true
