--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -26,7 +26,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
-    "tailwindcss": "^4",
+    "tailwindcss": "catalog:tailwindcss4",
     "typescript": "^5",
     "wrangler": "^4.30.0"
   }
