--- a/blog-archived/package.json
+++ b/blog-archived/package.json
@@ -9,9 +9,7 @@
     "analyze": "cross-env SLS_ENV=release nuxt build --analyze",
     "generate": "cross-env SLS_ENV=release NODE_ENV=production nuxt generate",
     "build": "npm run generate",
-    "deploy:cos": "npm run generate && ice-deploy -c --dir dist",
     "check:upgrade": "yarn upgradeInteractive --latest",
-    "sls:info": "components info",
     "gen:theme": "node scripts/theme.js",
     "format": "prettier client/**/*.vue",
     "prepare": "tw-patch install",
@@ -87,7 +85,7 @@
     "speed-measure-webpack-plugin": "^1.5.0",
     "tailwind-config-viewer": "^2.0.4",
     "tailwind-css-variables-theme-generator": "^0.4.0",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "catalog:tailwindcss3",
     "tailwindcss-patch": "^7.1.4",
     "theme-transition": "^1.0.2",
     "unplugin-tailwindcss-mangle": "^4.1.2",
