feat: histroy fallback

--- a/apps/blog/package.json
+++ b/apps/blog/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "blog",
-  "version": "0.1.0",
+  "name": "@icebreakers/blog",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
