--- a/blog-archived/package.json
+++ b/blog-archived/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@icebreakers/blog",
+  "name": "@icebreakers/blog-archived",
   "version": "2.0.0",
   "license": "MIT",
   "scripts": {
