feat!: remove all pages BREAKING CHANGE

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,14 +3,14 @@ packages:
   - 'packages/*'
   - blog-archived
 
-# hoistPattern:
-#   - '!tailwindcss'
-#   - '!@iconify/tailwind'
+hoistPattern:
+  - '!tailwindcss'
+  - '!@iconify/tailwind'
 
-# publicHoistPattern:
-#   - '!tailwindcss'
+publicHoistPattern:
+  - '!tailwindcss'
 
-# hoist: false
+hoist: false
 
 nodeLinker: hoisted
 
