--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@10.14.0",
+  "packageManager": "pnpm@10.15.0",
   "engines": {
     "node": ">=20.0.0"
   },
@@ -21,7 +21,8 @@
     "script:init": "monorepo init",
     "script:sync": "monorepo sync",
     "script:clean": "monorepo clean",
-    "script:mirror": "monorepo mirror"
+    "script:mirror": "monorepo mirror",
+    "commitlint": "commitlint --edit"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.1",
@@ -31,7 +32,7 @@
     "@commitlint/prompt-cli": "^19.8.1",
     "@commitlint/types": "^19.8.1",
     "@icebreakers/eslint-config": "^1.3.4",
-    "@icebreakers/monorepo": "^1.0.11",
+    "@icebreakers/monorepo": "^1.0.15",
     "@icebreakers/stylelint-config": "^1.1.2",
     "@types/fs-extra": "^11.0.4",
     "@types/get-value": "^3.0.5",
@@ -58,7 +59,7 @@
     "micromatch": "^4.0.8",
     "only-allow": "^1.2.1",
     "pathe": "^2.0.3",
-    "pkg-types": "^2.2.0",
+    "pkg-types": "^2.3.0",
     "rimraf": "^6.0.1",
     "set-value": "^4.1.0",
     "tslib": "^2.8.1",
@@ -67,8 +68,10 @@
     "turbo": "^2.5.6",
     "typescript": "^5.9.2",
     "vitest": "~3.2.4",
-    "wrangler": "^4.30.0",
-    "yaml": "^2.8.1"
+    "wrangler": "^4.32.0",
+    "yaml": "^2.8.1",
+    "es-toolkit": "^1.39.10",
+    "unbuild": "^3.6.1"
   },
   "publishConfig": {
     "access": "public",
