--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@opennextjs/cloudflare": "^1.6.5",
+    "@orama/orama": "^3.1.11",
     "@types/mdx": "^2.0.13",
     "fumadocs-core": "^15.7.1",
     "fumadocs-mdx": "^11.8.0",
